# nexus

./: .gitignore  README.md
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/dashboard_app/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/dashboard_app/: MainActivity.kt  NavGraph.kt
android/app/src/main/java/com/example/dashboard_app/data/db/: AppDatabase.kt  BudgetGoalDao.kt  CreditCardDao.kt  EventDao.kt  StockDao.kt  TransactionDao.kt  WorkShiftDao.kt
android/app/src/main/java/com/example/dashboard_app/work/: EventReminderWorker.kt  StockPriceWorker.kt
android/app/src/main/res/values/: colors.xml  themes.xml
android/app/src/test/java/com/example/dashboard_app/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
api/: Dockerfile  README.md  main.py  pyproject.toml
schedule-sync/: .clasp.json  Code.gs  appsscript.json
trading-bot/: .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
trading-bot/hermes_trading/: agent_state.py  db.py  loop.py  performance.py  phase_tracker.py  reflect.py  run.py  score.py  server.py  strategy_registry.py  trade_ideas.py
trading-bot/hermes_trading/adapters/: macro.py  news.py  onchain.py  price.py  stock_price.py
trading-bot/hermes_trading/agents/: evaluator.py  news_agent.py  risk_manager.py
trading-bot/hermes_trading/stocks/: loop.py  reflect.py  strategy.py  watchlist.py
trading-bot/state/: goal.yaml  stock_goals.yaml  strategy.yaml
(+36 files in other folders)
