[project]
name = "hermes-trading"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.3",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "rich>=13.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "anthropic>=0.105.2",
    "asyncpg>=0.29",
    "yfinance>=0.2",
]

[project.scripts]
hermes-trading = "hermes_trading.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
